--- a/src/app/features/user/album/page-album-component/album-top-track/album-top-track.component.html
+++ b/src/app/features/user/album/page-album-component/album-top-track/album-top-track.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row top-track-item " *ngIf="topTrack">
+    <div class="row top-track-item ">
         <div class=" col-md-1 text-end">
             <!-- <p class="track_no">{{id}}</p> -->
             <span class="playbtn" (click)="player()">
@@ -11,18 +11,15 @@
                 <img class="top-track-item__img" [src]="topTrack.album.images | errorImage" alt="{{ topTrack.name }}">
             </div>
             <div class="top-track-item__name-container">
-                <p class="top-track-item__name">{{ topTrack.name }}</p>
+                <p class="top-track-item__name">{{ topTrack.name' }}</p>
             </div>
             <div class="top-track-item__player" *ngIf="play">
                 <iframe class="top-track-item__audio fixed-bottom" [src]="topTrack.uri | uri" width="100%" height="80"
                     frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
-            <!-- <div class="duration">
-                {{(topTrack.duration_ms/1000)/60}}
-            </div> -->
         </div>
-        <!-- <div class="col-md-2 top-track-item__player-btn-container">
-            <a class="top-track-item__player-anchor" ">{{ "artist.song-preview"}}</a>
-        </div> -->
+        <div class="col-md-2 top-track-item__player-btn-container">
+            <a class="top-track-item__player-anchor" (click)="player()">{{ "artist.song-preview"}}</a>
+        </div>
     </div>
 </div>
