--- a/src/app/features/user/artist/page-artist-components/artist-albums/artist-albums.component.scss
+++ b/src/app/features/user/artist/page-artist-components/artist-albums/artist-albums.component.scss
@@ -1,52 +1,83 @@
-// SCSS Variables
-$layout_bp_mobile: 360px;
-$layout_bp_tablet: 800px;
-$layout_bp_desktop: 1000px;
-
-$dark-gray: #181818;
-$med-gray: #282828;
-$light-gray: #b3b3b3;
-$black: black;
-
-// SCSS Mixins
-@mixin tablet {
-  @media only screen and (min-width: $layout_bp_tablet) {
-    @content;
-  }
+.card {
+  display: inline-block;
+  max-height: 270px;
+  min-height: 270px;
+  // width: 270px;
+  border-radius: 4px;
+  padding: 16px;
+  overflow: hidden;
+  background-color: #181818;
+  transition: background-color 0.4s;
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.card:hover {
+  background-color: #282828;
 }
 
-@mixin desktop {
-  @media only screen and (min-width: $layout_bp_desktop) {
-    @content;
-  }
+.cover {
+  position: relative;
+  margin-bottom: 18px;
+}
+.cover img {
+  display: block;
+  width: 100%;
+  box-shadow: 0 8px 20px -4px hsl(0, 0%, 5%);
+  // border-radius: 50%;
 }
 
-// SCSS Styles
-.album-item {
-    margin-top: 25px;
-    margin-right: 20px;
-    cursor: pointer;
-    
-    &__img {
-        width: 213px;
-    }
+.play-icon {
+  position: absolute;
+  bottom: -2px;
+  right: 6px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  color: #fafafa;
+  background-color: #1db954;
+  box-shadow: 0 4px 16px -4px #121212;
+  opacity: 0;
+  transition: 0.4s, transform 0.1s;
+}
+.play-icon:hover {
+  transform: scale(1.1);
+}
+.card:hover .play-icon {
+  bottom: 6px;
+  opacity: 1;
+}
 
-    &__name-container {
-        text-align: center;
-    }
+.fa-play {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 52%;
+  top: 50%;
+  font-size: 1rem;
+}
 
-    &__name {
-        font-size: 14px;
-        line-height: 20px;
-        letter-spacing: .015em;
-        font-weight: var(--glue-font-weight-bold);
-        color: #fff;
-        text-transform: none;   
-        text-decoration: none;
-    }
-
-    &__name:hover {
-        text-decoration: underline;
-        cursor: pointer;
-    }
+.card-content {
+  font-family: "Montserrat", sans-serif;
+  color: #fafafa;
+}
+.card-content  {
+  h4{
+  margin-bottom: 6px; }
+  a {
+    font-size: 16px;
+    text-decoration: none;
+    color: inherit;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+  p {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    height: 2.5em;
+    font-size: 14px;
+    color: hsl(0, 0%, 70%);
+  }
 }
