--- a/src/app/features/user/home/page-home-components/todays-hit/todays-hit.component.html
+++ b/src/app/features/user/home/page-home-components/todays-hit/todays-hit.component.html
@@ -17,8 +17,8 @@
             <div class="carousel-item active">
                 <div class="container p-0">
                     <div class="row justify-content-around">
-                        <div class="col-md-2" *ngFor="let detail of cardData">
-                            <app-music-card [cardTitle]="detail.title" [urlpath]="detail.imgurl"></app-music-card>
+                        <div class="col-md-3" *ngFor="let card of cardData">
+                            <app-music-card [cardTitle]="card.title" [urlpath]="card.imgurl"></app-music-card>
                         </div>
                     </div>
                 </div>
@@ -26,8 +26,8 @@
             <div class="carousel-item">
                 <div class="container p-0">
                     <div class="row justify-content-around">
-                        <div class="col-md-2" *ngFor="let detail of cardData2">
-                            <app-music-card [cardTitle]="detail.title" [urlpath]="detail.imgurl"></app-music-card>
+                        <div class="col-md-3" *ngFor="let card of cardData2">
+                            <app-music-card [cardTitle]="card.title" [urlpath]="card.imgurl"></app-music-card>
                         </div>
                     </div>
                 </div>
