--- a/src/app/features/user/search/page-search-components/search-track-item/search-track-item.component.html
+++ b/src/app/features/user/search/page-search-components/search-track-item/search-track-item.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="moreTracks ? it : it < 4">
+<!-- <div *ngIf="moreTracks ? it : it < 4">
     <div class="card" *ngIf="track" (click)="navigate(track)">
         <div class="cover">
             <img [src]="track.album.images | errorImage" [alt]="track.name" />
@@ -9,6 +9,31 @@
         <div class="card-content">
             <h4><a>{{track.name}}</a></h4>
             <p>{{track.album.name}}</p>
+        </div>
+    </div>
+</div> -->
+<div class="container" *ngIf="moreTracks ? it : it < 4">
+    <div class="row top-track-item " *ngIf="track">
+        <div class=" col-md-1 text-end">
+            <!-- <p class="track_no">{{id}}</p> -->
+            <span class="playbtn" (click)="player()">
+                <i class="fa fa-play" aria-hidden="true"></i>
+            </span>
+        </div>
+        <div class=" col-md-9 top-track-item__left">
+            <div class="top-track-item__img-container">
+                <img class="top-track-item__img" [src]="track.album.images | errorImage" alt="{{ track.name }}">
+            </div>
+            <div class="top-track-item__name-container">
+                <p class="top-track-item__name">{{ track.name }}</p>
+            </div>
+            <div class="top-track-item__player" *ngIf="play">
+                <iframe class="top-track-item__audio fixed-bottom" [src]="track.uri | uri" width="100%" height="80"
+                    frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
+        </div>
+        <div class="col-md-2 top-track-item__player-btn-container">
+            <a class="top-track-item__player-anchor" (click)="player()">{{ "artist.song-preview"}}</a>
         </div>
     </div>
 </div>
