--- a/src/app/shared/global-components/music-card/music-card.component.html
+++ b/src/app/shared/global-components/music-card/music-card.component.html
@@ -1,5 +1,4 @@
-<div class="card card_container p-1">
-    <!-- <a class="stretched-link" routerLink="/user/album"></a> -->
+<!-- <div class="card card_container p-1">
     <img src=" {{urlpath}} " alt="img" />
     <button type="button" class="play_btn animate__animated animate__fadeInUp animate__delay-1 animate__faster">
         <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em"
@@ -10,6 +9,18 @@
     </button>
     <div class="card-body p-0 mt-2">
         <h6 class="card-title my-1">{{cardTitle}}</h6>
-        <!-- <p class="card-subtitle ">Card subtitle</p> -->
     </div>
-</div>
+</div> -->
+
+    <div class="card">
+        <div class="cover">
+            <img src=" {{urlpath}} " alt="img" />
+            <div class="play-icon">
+                <i class="fa fa-play"></i>
+            </div>
+        </div>
+        <div class="card-content">
+            <h4><a>{{cardTitle | titlecase}}</a></h4>
+            <!-- <p>{{artist.type | titlecase}}</p> -->
+        </div>
+    </div>
