--- a/src/app/shared/layout/layout-structures/page-album-layout/page-album-layout.component.html
+++ b/src/app/shared/layout/layout-structures/page-album-layout/page-album-layout.component.html
@@ -3,9 +3,11 @@
         <div class="col-md-2 p-0 dashboard h-100 sticky-top">
             <app-dashboard></app-dashboard>
         </div>
-        <div class="col-md-10 py-3 px-0 home">
-            <!-- <app-home-header></app-home-header> -->
+        <div class="col-md-8 py-3 px-0 home">
+            <app-home-header></app-home-header>
             <router-outlet></router-outlet>
+        </div><div class="col-md-2 disco pt-5">
+            Dummy Text..
         </div>
     </div>
 </div>
