--- a/src/app/shared/layout/layout-structures/page-home-layout/page-home-layout.component.html
+++ b/src/app/shared/layout/layout-structures/page-home-layout/page-home-layout.component.html
@@ -3,9 +3,12 @@
         <div class="col-md-2 p-0 dashboard h-100 sticky-top">
             <app-dashboard></app-dashboard>
         </div>
-        <div class="col-md-10 py-3 home">
+        <div class="col-md-8 py-3 home">
             <app-home-header></app-home-header>
             <router-outlet></router-outlet>
+        </div>
+        <div  class="col-md-2 bg-dark">
+            Dummy Text..
         </div>
         <div class="container-fluid p-0 fixed-bottom">
             <app-play-bar></app-play-bar>
